--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -45,7 +45,7 @@
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
             <li><a href="#"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a></li>
             <li><a class="nav-link" href="#"><img src="/images/user.svg" /></a></li>
-            <li><a class="nav-link" href="#"><img src="/images/cart.svg" /></a></li>
+            <li><a class="nav-link" href="/cart"><img src="/images/cart.svg" /></a></li>
           </ul>
         </div>
       </div>
