--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -249,7 +249,9 @@
                           <td>
                             <button data-id="<%= data._id  %>" class="badge btnListAndUnlist <%= data.isDeleted?'badge-outline-success':'badge-outline-primary' %>"><%= data.isDeleted?'List':'Unlist'%></button>
                             <td>
-                              <button data-id="/admin/category/update/<%= data._id %>" class="badge badge-outline-warning update-category-btn">Update</button>
+                              <a href="/admin/category/update/<%= data._id %>">
+                                <button  class="badge badge-outline-warning update-category-btn">Update</button>
+                              </a>
                             </td>
                         </tr>
                       <% }) %>
