--- a/views/users/layouts/header.ejs
+++ b/views/users/layouts/header.ejs
@@ -36,7 +36,7 @@
           <a class="nav-link" href="#"><img src="/images/user.svg" /></a>
         </li>
         <li>
-          <a class="nav-link" href="cart.html"
+          <a class="nav-link" href="/cart"
             ><img src="/images/cart.svg"
           /></a>
         </li>
