--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -40,7 +40,7 @@
             <li><a class="nav-link" href="/shop">Shop</a></li>
             <li><a class="nav-link" href="/about">About us</a></li>
             <li><a class="nav-link" href="/contact">Contact us</a></li>
-            <li><a class="nav-link" href="/service">My Account</a></li>
+            <li><a class="nav-link" href="/dashboard">My Account</a></li>
           </ul>
           <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
             <li><a href="#"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a></li>
