--- a/views/users/layouts/header.ejs
+++ b/views/users/layouts/header.ejs
@@ -24,7 +24,7 @@
         <li><a class="nav-link" href="/shop">Shop</a></li>
         <li><a class="nav-link" href="/about">About us</a></li>
         <li><a class="nav-link" href="/contact">Contact us</a></li>
-        <li><a class="nav-link" href="#">MY Account</a></li>       
+        <li><a class="nav-link" href="/dashboard">MY Account</a></li>       
       </ul>
       <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
         <li>
