--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -19,7 +19,6 @@
     <link rel="stylesheet" href="/css/pdtDetails.css" />
     <link rel="stylesheet" href="/css/style.css" />
     <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </head>
   <body>
     <%- include("./layouts/header.ejs") %>
@@ -209,6 +208,7 @@
     </div>
     <%- include("./layouts/footer.ejs") %>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/users/pDetails.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
